# real-estate-predictor

./: .dockerignore  .gitignore  Dockerfile  MAKEFILE  MANIFEST.in  Makefile  README.md  api.py  feature_engineering.ipynb  feature_engineering.py  load_data.ipynb  load_data.py  model.ipynb  model.py  pyproject.toml  requirements.txt  run.py  setup.py  test.py
.github/workflows/: github-actions-demo.yml  test_docker.yml  tests.yml
extra/: model.ipynb  model.py  rough.ipynb  run.py
models/: lease_model_parameters.sav  sale_model_parameters.sav
real-estate-predictor/processing/: dataset_manager.py  model_manager.py
real-estate-predictor/utils/: generate_dataset.py
real_estate_predictor/: app.py  create_train_pipeline.py  predict.py  requirements.txt
real_estate_predictor/config/: __init__.py  api_config.py  config.py  sample_lease_config.yaml  sample_sale_config.yaml
real_estate_predictor/datasets/: dataset.py
real_estate_predictor/examples/: 01_Introduction_notebook.ipynb
real_estate_predictor/models/: model.py
real_estate_predictor/processing/: README.md  dataset_analysis.py  dataset_manager.py  dataset_preprocessing.py  extract_dataset.py  feature_engineering.py  pipeline.py  processor.py  test.py
real_estate_predictor/storage/processors/: datacleaner_2025-05-19T09-31-57.pkl  featureengineering_2025-05-19T09-32-11.pkl  processor_2025-05-19T09-32-17.pkl
real_estate_predictor/storage/production/: sample_lease_model.pkl  sample_sale_model.pkl
real_estate_predictor/tests/: test_generate_dataset.py  test_predict.py  test_preprocessor.py  test_xgboost.py
real_estate_predictor/tests/utils/: test_generate_dataset.py
real_estate_predictor/utils/: dataset_analysis.py  datatransformer.py  extract_dataset.py  feature_engineering.py  functionlogger.py  generate_dataset.py  imputer.py  manipulate_dataset.py  merge_datasets.py  pandas.py  save_processor.py  validate_input.py
scripts/: api_helper_functions.py  feature_engineering.py  load_data.py  model.py
